fix: scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,16 +120,16 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-::-webkit-scrollbar {
+.scrollbar-style::-webkit-scrollbar {
   height: 8px;
   width: 8px;
 }
 
-::-webkit-scrollbar-track {
+.scrollbar-style::-webkit-scrollbar-track {
   background-color: #0000000a;
 }
 
-::-webkit-scrollbar-thumb {
+.scrollbar-style::-webkit-scrollbar-thumb {
   border-radius: 6px;
   background-color: #0000001f;
 }
